added notes from ps4

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -245,7 +245,7 @@ For an arbitrary state $n$ the next state is given by
     H_2 & = 4x^2-2                                   &  & \text{even} \\
     H_3 & = 8x^3-12x                                 &  & \text{odd}  \\
     H_4 & = 16x^4-48x^2+12                           &  & \text{even} \\
-    H_n & = (-1)^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}
+    H_n & = {(-1)}^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}
 \end{align*}
 }
 
