--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -241,10 +241,10 @@ For an arbitrary state $n$ the next state is given by
     \xi       & =\sqrt{\frac{m\omega}{\hbar}}x
 \end{align*}
 {\tiny\noindent\begin{align*}
-    H_1 & = 2x                                       &  & \text{odd}  \\
-    H_2 & = 4x^2-2                                   &  & \text{even} \\
-    H_3 & = 8x^3-12x                                 &  & \text{odd}  \\
-    H_4 & = 16x^4-48x^2+12                           &  & \text{even} \\
+    H_1 & = 2x                                         &  & \text{odd}  \\
+    H_2 & = 4x^2-2                                     &  & \text{even} \\
+    H_3 & = 8x^3-12x                                   &  & \text{odd}  \\
+    H_4 & = 16x^4-48x^2+12                             &  & \text{even} \\
     H_n & = {(-1)}^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}
 \end{align*}
 }
@@ -255,7 +255,7 @@ For an arbitrary state $n$ the next state is given by
     \item $n$ is the number of energy quanta in the oscillator
     \item $\widehat{N} \equiv \hat{a}_{+}\hat{a}_{-} = $ number operator because $\left<N\right> = n$ for $\psi_n$
     \item The lowest state $\psi_0$ has the \textbf{zero point energy}. Even if all the energy is removed from the system (zero Kelvin) the oscillator still has this zero point energy.
-    \item Solutions alter between even and odd.
+    \item Solutions alter between even and odd because the potential is symmetric.
     \item $\psi_n$ form a complete basis.
     \item Soft boundary conditions - finite potential at the boundary/barrier.
 \end{itemize}
