--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -310,7 +310,8 @@ For some operators it can be useful to evaluate the commutator on a test functio
     \left[\frac{d^2}{dx^2}, \hat{x}\right]      & = 2\frac{d}{dx}
 \end{align*}
 
-Remark:\\
+\textbf{Remark}:
+
 It is important to calculate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{A}\widehat{B} - \widehat{B}\widehat{A})f$ directly.
 
 \subsection{Finite Potential}
