--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -301,7 +301,7 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
 \end{align*}
 
 
-\textbf{Evaluate Commutators}
+\ptitle{Evaluate Commutators}
 
 For some operators it can be useful to evaluate the commutator on a test function first, and then remove the test function in the end, e.g.:
 \noindent\begin{align*}
