--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -35,7 +35,7 @@ These functions can be used as a complete orthonormal base (ONB) if
     \langle f|g+h \rangle       & =\langle f|g \rangle + \langle f|h \rangle                                        \\
     \langle g|f \rangle         & = {\langle f|g \rangle}^*                  &  & \text{``hermitian''}              \\
     \langle f|f \rangle         & \ge 0                                      &  & \text{positive definite}          \\
-    \langle f|f \rangle         & = 0 \leftrightarrow f=0                                                           \\
+    \langle f|f \rangle         & = 0 \leftrightarrow f=0                                                         
 \end{align*}
 
 \subsubsection{Properties of QM Hilbert Space}
@@ -114,7 +114,7 @@ If the spectrum of $\hat{Q}$ is discrete and the state
 \begin{equation*}
     \Psi=\sum_n c_n f_n
 \end{equation*}
-is not a eigenfunction of $\hat{Q}$ (but $f_n$ is), the probability of measuring the particular eigenvalue $q_n$ corresponding to the eigenfunction $f_n(x)$ is
+is \textbf{not a eigenfunction} of $\hat{Q}$ (but $f_n$ is), the probability of measuring the particular eigenvalue $q_n$ corresponding to the eigenfunction $f_n(x)$ is
 \noindent\begin{equation*}
     |c_n|^2, \quad c_n = \langle f_n|\Psi\rangle
 \end{equation*}
@@ -122,7 +122,7 @@ It follows that
 \noindent\begin{align*}
     \langle Q\rangle & = \sum_{n=1}^{\infty} |c_n|^2 q_n                     \\
     1                & =\sum_{n=1}^{\infty} |c_n|^2      & \text{normalized} \\
-    \sigma^2 != 0
+    \sigma^2         & \neq 0
 \end{align*}
 As mentioned in Section\ \ref{ssec:ISW}, these coefficients can be obtained by projecting $\Psi$ onto $\psi_n$:
 \noindent\begin{equation*}
