moved statistics, commutators and inner product to the appendix

--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -25,18 +25,9 @@ These functions can be used as a complete orthonormal base (ONB) if
     c_n                     & = \langle f_n|f \rangle          &  & \text{projection on base}
 \end{align*}
 
+\textbf{Remark}
 
-\subsubsection{Properties of the Inner Product}
-
-\noindent\begin{align*}
-    \langle \lambda f|g \rangle & =\lambda^* \langle f|g \rangle             &  & \text{semilinear for scalar mul.} \\
-    \langle f|\lambda g \rangle & =\lambda \langle f|g \rangle                                                      \\
-    \langle f+g|h \rangle       & =\langle f|h \rangle + \langle g|h \rangle &  & \text{linear for addition}        \\
-    \langle f|g+h \rangle       & =\langle f|g \rangle + \langle f|h \rangle                                        \\
-    \langle g|f \rangle         & = {\langle f|g \rangle}^*                  &  & \text{``hermitian''}              \\
-    \langle f|f \rangle         & \ge 0                                      &  & \text{positive definite}          \\
-    \langle f|f \rangle         & = 0 \leftrightarrow f=0                                                         
-\end{align*}
+Properites of the inner product can be found in Appendix\ \ref{ssec:InnerProd}
 
 \subsubsection{Properties of QM Hilbert Space}
 \begin{itemize}
