starting with week6

--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -136,3 +136,11 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
           If the system is in a eigenstate of $\hat{Q}$, identical measurements will always yield the eigenvalue $q$ of $\hat{Q}$.
           Else, a single measurement will yield one of the eigenvalues $q_n$ of $\hat{Q}$ with probability $|c_n|^2$.
 \end{enumerate}
+
+\subsection{The Generalized Uncertainity Principle}
+For any Observables $A$, $B$:
+\begin{equation*}
+    \sigma_A^2\cdot\sigma_B^2\geqslant\left(\frac1{2i}\langle[\hat{A},\hat{B}]\rangle\right)^2
+\end{equation*}
+
+
